Add vector list with a fingertree data structure.